--- a/MediatRGen/MediatRGen.csproj
+++ b/MediatRGen/MediatRGen.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.13.0" />
   </ItemGroup>
 
 </Project>
