core files added

--- a/MediatRGen.Core/MediatRGen.Core.csproj
+++ b/MediatRGen.Core/MediatRGen.Core.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="CoreFiles\" />
+    <Folder Include="Application\" />
+    <Folder Include="CrossCuttingConcerns\" />
+    <Folder Include="Persistence\Repositories\" />
+    <Folder Include="Security\" />
+    <Folder Include="Persistence\Dynamic\" />
+    <Folder Include="Persistence\Paging\" />
   </ItemGroup>
 
 </Project>
