--- a/MediatRGen/MediatRGen.Cli.csproj
+++ b/MediatRGen/MediatRGen.Cli.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.13.0" />
 
     <ProjectReference Include="..\Core.Application\Core.Application.csproj" />
