--- a/MediatRGen/MediatRGen.Cli.csproj
+++ b/MediatRGen/MediatRGen.Cli.csproj
@@ -13,14 +13,14 @@
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
-
-    <ProjectReference Include="..\Core.Application\Core.Application.csproj" />
-    <ProjectReference Include="..\Core.CrossCuttingConcerns\Core.CrossCuttingConcerns.csproj" />
-    <ProjectReference Include="..\Core.Domain\Core.Domain.csproj" />
-    <ProjectReference Include="..\Core.Persistence\Core.Persistence.csproj" />
     <None Remove="D:\projeler\MediatRGen\Core.Domain\bin\Release\net7.0\Core.Domain.dll" />
     <None Remove="D:\projeler\MediatRGen\Core.Domain\bin\Release\net7.0\Core.Domain.dll" />
 
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MediatRGen.Core\MediatRGen.Core.csproj" />
+    <ProjectReference Include="..\MediatRGen.Services\MediatRGen.Services.csproj" />
   </ItemGroup>
 
 
