--- a/MediatRGen.Services/MediatRGen.Services.csproj
+++ b/MediatRGen.Services/MediatRGen.Services.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MediatRGen.Core\MediatRGen.Core.csproj" />
+  </ItemGroup>
+
 </Project>
