--- a/Core.Application/Core.Application.csproj
+++ b/Core.Application/Core.Application.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\Core.Domain\Core.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="MediatRBase\Queries\" />
+  </ItemGroup>
+
 </Project>
