--- a/MediatRGen/MediatRGen.Cli.csproj
+++ b/MediatRGen/MediatRGen.Cli.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="Humanizer" Version="2.14.1" />
+    <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
     <None Remove="D:\projeler\MediatRGen\Core.Domain\bin\Release\net7.0\Core.Domain.dll" />
     <None Remove="D:\projeler\MediatRGen\Core.Domain\bin\Release\net7.0\Core.Domain.dll" />
