--- a/MediatRGen/MediatRGen.Cli.csproj
+++ b/MediatRGen/MediatRGen.Cli.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Humanizer" Version="2.14.1" />
     <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" />
+    <PackageReference Include="Spectre.Console.Cli" Version="0.50.0" />
     <None Remove="D:\projeler\MediatRGen\Core.Domain\bin\Release\net7.0\Core.Domain.dll" />
     <None Remove="D:\projeler\MediatRGen\Core.Domain\bin\Release\net7.0\Core.Domain.dll" />
 
